change getFirst to get by index